[gd_scene load_steps=10 format=3 uid="uid://dpvelod2qxs7i"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_3f8b8"]
[ext_resource type="PackedScene" uid="uid://dqhs26xg6toe2" path="res://scenes/components/health.tscn" id="2_g43kt"]
[ext_resource type="PackedScene" uid="uid://jr1gvi8eeihh" path="res://scenes/components/attacks/attack_melee.tscn" id="2_mg35g"]
[ext_resource type="PackedScene" uid="uid://bewqxhsfn7dgw" path="res://scenes/components/hit_area.tscn" id="3_wv8i5"]
[ext_resource type="PackedScene" uid="uid://crqfmq65suhg6" path="res://scenes/components/attacks/attack_shoot.tscn" id="5_2tq8v"]
[ext_resource type="SpriteFrames" uid="uid://dt2a5lqauul3u" path="res://anims/res/apollyon_anim.tres" id="6_npcbb"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ovjuc"]

[sub_resource type="Environment" id="Environment_grnmp"]
background_color = Color(0.447059, 0.890196, 1, 1)
ambient_light_source = 1
ambient_light_color = Color(1, 1, 1, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_qsv6v"]

[node name="Player" type="CharacterBody3D" groups=["player"]]
collision_mask = 3
script = ExtResource("1_3f8b8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_ovjuc")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 14, 14)
environment = SubResource("Environment_grnmp")
fov = 40.8

[node name="Health" parent="." instance=ExtResource("2_g43kt")]
max_health = 10

[node name="HitArea" parent="." instance=ExtResource("3_wv8i5")]
collision_layer = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitArea"]
shape = SubResource("CylinderShape3D_qsv6v")

[node name="InvTimer" type="Timer" parent="."]

[node name="AttackMelee" parent="." instance=ExtResource("2_mg35g")]

[node name="AttackShoot" parent="." instance=ExtResource("5_2tq8v")]

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(0.361726, 0, 0, 0, 0.255779, 0.255779, 0, -0.255779, 0.255779, 0, 0, 0)
texture_filter = 1
sprite_frames = ExtResource("6_npcbb")
animation = &"s1_run"
autoplay = "s1_idle"

[connection signal="direction_changed" from="." to="AttackMelee" method="direction_listener"]
[connection signal="direction_changed" from="." to="AttackShoot" method="direction_listener"]
